Fixes top menu overflow on large screens

--- a/src/app/components/top-menu/top-menu.component.scss
+++ b/src/app/components/top-menu/top-menu.component.scss
@@ -38,10 +38,4 @@
       margin: 0 25px 0 0;
     }
   }
-
-  @include viewport-desktop-medium-and-up {
-    li {
-      margin: 0 50px 0 0;
-    }
-  }
 }
